objects/IAM_Contact_Provisioning__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IAM_Account_Application__r.IAM_Account_Name__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Mail_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Mail Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMI_Dummy_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dummy Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMI_Flagged_E_mail_Address__c</fullName>
        <label>Flagged E-mail Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>IAM_Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>IAM_Contact__r.FirstName  &amp; &quot; &quot; &amp; IAM_Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>IAM_Contact__r.Phone</formula>
        <label>Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Connected_Solutions_Role__c</fullName>
        <label>Roles</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AccountManager</fullName>
                </value>
                <value>
                    <fullName>ServiceTechnician</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Subscriber</fullName>
                    <isActive>false</isActive>
                    <label>Subscriber</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Account_Application__c</fullName>
        <label>Location Access Feature</label>
        <referenceTo>IAM_Application__c</referenceTo>
        <relationshipLabel>User_Features_And_ Access</relationshipLabel>
        <relationshipName>Contact_Provisionings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IAM_Account_ID__c</fullName>
        <formula>IAM_Contact__r.AccountId</formula>
        <label>IAM_Account_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Account_Name__c</fullName>
        <formula>IAM_Contact__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Account_Type__c</fullName>
        <formula>TEXT(IAM_Contact__r.Account.Type)</formula>
        <label>IAM Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Active_Contact_Provisioning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Provisioning</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Active Contact Provisionings</relationshipLabel>
        <relationshipName>Contact_Provisionings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IAM_Additional_Service_Provider__c</fullName>
        <label>IAM Additional Service Provider</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Application_Name__c</fullName>
        <label>Application Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EDS</fullName>
                </value>
                <value>
                    <fullName>Cummins Service Training</fullName>
                </value>
                <value>
                    <fullName>QuickServe Online</fullName>
                </value>
                <value>
                    <fullName>India ABO</fullName>
                </value>
                <value>
                    <fullName>Repair logistics and Service</fullName>
                </value>
                <value>
                    <fullName>Connected Solutions</fullName>
                </value>
                <value>
                    <fullName>CUMPAS 2.0</fullName>
                </value>
                <value>
                    <fullName>Guidanz</fullName>
                </value>
                <value>
                    <fullName>Marketplace</fullName>
                </value>
                <value>
                    <fullName>Identity and Access Management</fullName>
                </value>
                <value>
                    <fullName>WWSPS</fullName>
                </value>
                <value>
                    <fullName>BOX External Partners</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Fleetguard FIT</fullName>
                </value>
                <value>
                    <fullName>NextGen</fullName>
                </value>
                <value>
                    <fullName>Rapid Serve Web</fullName>
                </value>
                <value>
                    <fullName>Mexico Warranty</fullName>
                </value>
                <value>
                    <fullName>Archer</fullName>
                </value>
                <value>
                    <fullName>BOX</fullName>
                </value>
                <value>
                    <fullName>CARE</fullName>
                </value>
                <value>
                    <fullName>CSS</fullName>
                </value>
                <value>
                    <fullName>Guidanz™ - Campaigns</fullName>
                </value>
                <value>
                    <fullName>Guidanz™ - Free Registration</fullName>
                </value>
                <value>
                    <fullName>Guidanz™ - ImmediateAssessment</fullName>
                </value>
                <value>
                    <fullName>Guidanz™ - Service</fullName>
                </value>
                <value>
                    <fullName>INSITE</fullName>
                </value>
                <value>
                    <fullName>Product Connectivity</fullName>
                </value>
                <value>
                    <fullName>DBU India - Field Service Lightning</fullName>
                </value>
                <value>
                    <fullName>Electrified Powertrain Specification Tool</fullName>
                </value>
                <value>
                    <fullName>PowerSpec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Approval_URL__c</fullName>
        <formula>$Label.IAM_Approval_URL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAM_Approval_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Assigned_Units__c</fullName>
        <description>CalAssist/Intapp/Intapp OEM count assigned to a user from Account Feature &amp; Access.</description>
        <label>Assigned Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_Business_Justification__c</fullName>
        <description>To store business justification provided while registration for Cummins API Portal App</description>
        <label>Business Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Contact_Name__c</fullName>
        <formula>IAM_Contact__r.FirstName + &quot; &quot; +  IAM_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Contact_Status__c</fullName>
        <formula>TEXT(IAM_Contact__r.IAM_Contact_Status__c)</formula>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>User_Features_And_ Access (Contact)</relationshipLabel>
        <relationshipName>Contact_Provisionings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IAM_Cumpas_Modularity__c</fullName>
        <label>Modules</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>View Credit</fullName>
                </value>
                <value>
                    <fullName>Core Returns</fullName>
                </value>
                <value>
                    <fullName>Core Swap</fullName>
                </value>
                <value>
                    <fullName>Parts Order</fullName>
                </value>
                <value>
                    <fullName>Parts Inquiry</fullName>
                </value>
                <value>
                    <fullName>Price Extract</fullName>
                </value>
                <value>
                    <fullName>Core Credits</fullName>
                </value>
                <value>
                    <fullName>Core Return</fullName>
                </value>
                <value>
                    <fullName>Parts Ordering</fullName>
                </value>
                <value>
                    <fullName>Parts Validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Cumpas_User_Group__c</fullName>
        <label>User Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor Admin</fullName>
                </value>
                <value>
                    <fullName>Dealer Admin</fullName>
                </value>
                <value>
                    <fullName>End User (Dealer User)</fullName>
                </value>
                <value>
                    <fullName>Vendor User</fullName>
                </value>
                <value>
                    <fullName>Distributor Sales Representative</fullName>
                </value>
                <value>
                    <fullName>Distributor Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Distributor Customer Support Representative</fullName>
                </value>
                <value>
                    <fullName>Distributor Customer Support Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Customer_Care_Email_c__c</fullName>
        <formula>$Label.IAM_Customer_Care_Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAM_Customer_Care_Email__c</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_DA_Calibaration_Role__c</fullName>
        <description>This field is to store DA role</description>
        <label>DA Calibration Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PrimaryContact</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Service Technician</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>ATLAS_UNIVERSAL_DISTRIBUTOR</fullName>
                </value>
                <value>
                    <fullName>ATLAS_UNIVERSAL_FLEET</fullName>
                </value>
                <value>
                    <fullName>ATLAS_UNIVERSAL_DEALER</fullName>
                </value>
                <value>
                    <fullName>ATLAS_Universal_EMPLOYEE</fullName>
                </value>
                <value>
                    <fullName>ATLAS_Universal_SERVICE_DISTRIBUTOR</fullName>
                </value>
                <value>
                    <fullName>ATLAS_Universal_SERVICE_DEALER</fullName>
                </value>
                <value>
                    <fullName>ATLAS_Universal_SERVICE_EMPLOYEE</fullName>
                </value>
                <value>
                    <fullName>ATLAS_UNIVERSAL_CAMPAIGN_DISTRIBUTOR</fullName>
                </value>
                <value>
                    <fullName>ATLAS_Universal_CAMPAIGN_DEALER</fullName>
                </value>
                <value>
                    <fullName>ATLAS_Universal_CAMPAIGN_EMPLOYEE</fullName>
                </value>
                <value>
                    <fullName>ATLAS_Universal_CAMPAIGN_ENDUSER</fullName>
                </value>
                <value>
                    <fullName>ATLAS_Universal_REG_DISTRIBUTOR</fullName>
                </value>
                <value>
                    <fullName>ATLAS_Universal_REG_DEALER</fullName>
                </value>
                <value>
                    <fullName>ATLAS_Universal_REG_EMPLOYEE</fullName>
                </value>
                <value>
                    <fullName>ATLAS_Universal_REG_ENDUSER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_DA_Customer_List__c</fullName>
        <label>Customer List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAM_DA_Session_Time_Out__c</fullName>
        <defaultValue>&quot;864000000&quot;</defaultValue>
        <label>Session Time Out</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Device_Info__c</fullName>
        <description>It contains device information from which free or paid count is uploaded or downloaded to &amp; from IAM to the respective device.</description>
        <label>Device Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Download_Units__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It contains free/paid units need to be downloaded on Guidanz Mobile device from IAM.</description>
        <label>Download Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IAM_From_CDO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if subscription created through CDO Inbound API</description>
        <label>IAM_From_CDO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_From_JIT_Execution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for IAM Purpose and is used to know if Contact got created as apart of JIT implementation or not.</description>
        <label>From JIT Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_From_Registration__c</fullName>
        <formula>IAM_Contact__r.IAM_from_Registration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAM From Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Guidanz_Mobile_Roles__c</fullName>
        <label>Guidanz Mobile Roles</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>IAM_Application_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Beta Testing Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test CalAssist Units Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test CMP Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test IAS Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test Intapp OEM Units Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test Intapp Units Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test Power Plus Lite Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test PS PRO Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Field Test SRV Guidanz Mobile</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile CalAssist Units</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Campaign Dealer</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Campaign Distributor</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Campaign Employee</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Campaign Enduser</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Immediate Assessment Dealer</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Immediate Assessment Distributor</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Immediate Assessment Employee</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Immediate Assessment Fleet</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Intapp OEM Units</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Intapp Units</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Registered Dealer</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Registered Distributor</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Registered Employee</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Registered Enduser</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Service Dealer</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Service Distributor</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile Service Employee</fullName>
                </value>
                <value>
                    <fullName>Guidanz Mobile User</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Guidanz_Skip_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to skip &apos;IAM_Check_To_Stop_Name_Modification&apos; validation rule from apex</description>
        <label>IAM Guidanz Skip Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_HR_BMS_Instance_Name__c</fullName>
        <label>IAM_HR_BMS_Instance_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_HR_Customer_Number__c</fullName>
        <label>IAM_HR_Customer_Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Inactive_Contact_Provisioning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inactive Contact Provisioning</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Inactivated Contact Provisionings</relationshipLabel>
        <relationshipName>Contact_Provisionings_InActive</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IAM_Is_Reclaim_Access_Email_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to prevent approval email for application access once contact status set from Reclaimed to Active.</description>
        <label>Is Reclaim Access Email Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_License_Type__c</fullName>
        <label>License Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Logo__c</fullName>
        <formula>$Label.CMI_Cumminslogo_Link</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAM_Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_NpbuDiagExpire__c</fullName>
        <description>It stores subscription and its expiration date format for subscribed and admin managed NPBU Diagnostics app.</description>
        <label>NPBU Diagnostics Expiration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Occupation_List__c</fullName>
        <label>Occupation List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OEM Sales / Service</fullName>
                </value>
                <value>
                    <fullName>Owner / Operator</fullName>
                </value>
                <value>
                    <fullName>Fleet Manager</fullName>
                </value>
                <value>
                    <fullName>Cummins Distributor</fullName>
                </value>
                <value>
                    <fullName>Cummins Field Sales</fullName>
                </value>
                <value>
                    <fullName>Cummins Corp / Engineering</fullName>
                </value>
                <value>
                    <fullName>Basic Plus</fullName>
                    <isActive>false</isActive>
                    <label>Basic Plus</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Partner_EDS_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To determine whether  - If user has CREATED (Origination User ID) or MODIFIED (Last User ID) an EDS DSID within the last 12 months . Field to updated by Guidanz team</description>
        <label>Is EDS Used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Promotion__c</fullName>
        <label>Service Training ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Qsolexpiration__c</fullName>
        <label>QSOL Expiration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_RLS_Customer_Number__c</fullName>
        <label>RLS Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_RLS_Group_Admin_Email__c</fullName>
        <label>RLS Group Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IAM_RSW_Other_Reason__c</fullName>
        <label>IAM RSW Other Reason</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_RSW_Preferred_Service_Code__c</fullName>
        <label>RSW Preferred Service Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_RSW_Reason__c</fullName>
        <label>IAM_RSW_Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer Basic Access</fullName>
                </value>
                <value>
                    <fullName>Dealer Claim Filing Access</fullName>
                </value>
                <value>
                    <fullName>National Account/Fleet Access</fullName>
                </value>
                <value>
                    <fullName>Distributor Access</fullName>
                </value>
                <value>
                    <fullName>Cummins Internal Access</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_RSW_Status__c</fullName>
        <label>RSW Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Reason__c</fullName>
        <label>User Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Reject_Reason__c</fullName>
        <label>IAM Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription Revoked</fullName>
                </value>
                <value>
                    <fullName>Subscription Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancellation Comments</fullName>
                </value>
                <value>
                    <fullName>Subscription Expired</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Subscription Request Rejected</fullName>
                </value>
                <value>
                    <fullName>Requested Removal</fullName>
                </value>
                <value>
                    <fullName>No Longer at Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Remaining_Count_Formatted__c</fullName>
        <description>It display remaing count in text format</description>
        <formula>IF(OR(ISPICKVAL(IAM_Application_Name__c, &apos;Guidanz Mobile&apos;), ISPICKVAL(IAM_Application_Name__c, &apos;Field Test Guidanz Mobile&apos;))
	, IF(CONTAINS(IAM_Subscription_Name__c, &apos;CalAssist Units&apos;)
		, &apos;CalAssist-&apos; + TEXT(IAM_Remaining_Units__c)
		, IF(CONTAINS(IAM_Subscription_Name__c, &apos;Intapp Units&apos;)
			, &apos;Intapp-&apos; + TEXT(IAM_Remaining_Units__c)
			, IF(CONTAINS(IAM_Subscription_Name__c, &apos;Intapp OEM Units&apos;)
				, &apos;IntappOEM-&apos; + TEXT(IAM_Remaining_Units__c)
				, &apos;&apos;
				)
			)
		)
, &apos;&apos;)</formula>
        <label>Remaining Units Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Remaining_Units__c</fullName>
        <description>If the count is uploaded from API then it will be added to the Remaining Count. If the count is downloaded from API then it will be subtracted from the Remaining Count.</description>
        <label>Remaining Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_Role__c</fullName>
        <label>Role/Feature</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>IAM_Application_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>RLS Admin</fullName>
                </value>
                <value>
                    <fullName>Customer Admin</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Channel Admin</fullName>
                </value>
                <value>
                    <fullName>External User</fullName>
                </value>
                <value>
                    <fullName>Legal Reviewer</fullName>
                </value>
                <value>
                    <fullName>National Account Admin</fullName>
                </value>
                <value>
                    <fullName>Quality Reviewer</fullName>
                </value>
                <value>
                    <fullName>Restricted User</fullName>
                </value>
                <value>
                    <fullName>Super Channel Admin</fullName>
                </value>
                <value>
                    <fullName>Service Training User</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>OSM Role</fullName>
                </value>
                <value>
                    <fullName>Distributor Admin</fullName>
                </value>
                <value>
                    <fullName>Dealer Admin</fullName>
                </value>
                <value>
                    <fullName>Dealer User</fullName>
                </value>
                <value>
                    <fullName>Distributor Sales Representative</fullName>
                </value>
                <value>
                    <fullName>Distributor Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Distributor Customer Support Rep</fullName>
                </value>
                <value>
                    <fullName>Distributor Customer Support Manager</fullName>
                </value>
                <value>
                    <fullName>QSOL Distributor</fullName>
                </value>
                <value>
                    <fullName>QSOL Dealer</fullName>
                </value>
                <value>
                    <fullName>QSOL Fleet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Source__c</fullName>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IAM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending Account Level</fullName>
                </value>
                <value>
                    <fullName>Pending Account Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Contact Approval</fullName>
                </value>
                <value>
                    <fullName>Active-Indemnified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Subscription_Name__c</fullName>
        <label>Subscription Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Upload_Units__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It contains unused free/paid units uploaded back to IAM from Guidanz Mobile device (mobile).</description>
        <label>Upload Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_User_Type__c</fullName>
        <label>IAM User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Provisionings</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>